--- a/Go-api/config/database.yml
+++ b/Go-api/config/database.yml
@@ -9,8 +9,8 @@ test:
   encoding: unicode
   database: Go_test
   pool: 5
-  username: chrislmauldin
-  password: postgres
+  username: kaichimomose
+  password:
 
 
 development:
@@ -18,5 +18,5 @@ development:
     encoding: unicode
     database: Go_development
     pool: 5
-    username: chrislmauldin
-    password: postgres
+    username: kaichimomose
+    password:
